--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -181,7 +181,7 @@ const makeTitle = title
         "sameAs": "https://maps.app.goo.gl/o1PTfsdJeiBPjdu38"
         }
     </script> 
-<!--
+    <!--5 star reviews-->
     <script type="application/ld+json">
       {
         "@context": "http://schema.org/",
@@ -194,10 +194,10 @@ const makeTitle = title
           "ratingValue": "4.9",
           "bestRating": "5",
           "worstRating": "1",
-          "ratingCount": "87"
+          "ratingCount": "84"
         }
       }
-    </script>-->
+    </script>
   </head>
 
   <body>
