--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -13,7 +13,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
           <img
         
             loading="lazy"
-            src="/images/refrigerator-repair.webp"
+            src="/units/refrigerator-repair.webp"
             alt="Same day expert refrigerator repair - Los Angeles"
           />
         </div>
@@ -43,8 +43,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         <div class="f-content-machinery">
           <img
             loading="lazy"
-            src="/images/freezer-stove-repair.webp"
-            alt="Same day expert freezer repair - Los Angeles"
+            src="/units/freezer-repair.webp"
+            alt="Freezer repair Los Angeles"
           />
         </div>
 
@@ -74,8 +74,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         <div class="f-content-machinery">
           <img
             loading="lazy"
-            src="/images/washer-repair.webp"
-            alt="Same day expert washer repair - Los Angeles"
+            src="/units/washer-repair.webp"
+            alt="Washer repair Los Angeles"
           />
         </div>
 
