--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -102,8 +102,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         <div class="f-content-machinery">
           <img
             loading="lazy"
-            src="/images/dryer-repair.webp"
-            alt="Same day expert dryer repair - Los Angeles"
+            src="/units/dryer-repair.webp"
+            alt="Dryer repair Los Angeles"
           />
         </div>
 
@@ -130,8 +130,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         <div class="f-content-machinery">
           <img
             loading="lazy"
-            src="/images/range-stove-repair.webp"
-            alt="Same day expert range/stover repair - Los Angeles"
+            src="/units/range-stove-repair.webp"
+            alt="Range repair Los Angeles / Stove repair Los Angeles"
           />
         </div>
 
@@ -161,8 +161,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         <div class="f-content-machinery">
           <img
             loading="lazy"
-            src="/images/dishwasher-repair.webp"
-            alt="Same day dishwasher repair - Los Angeles"
+            src="/units/dishwasher-repair.webp"
+            alt="Dishwasher repair Los Angeles"
           />
         </div>
 
