--- a/src/components/units-commercial-equipment-los-angeles.astro
+++ b/src/components/units-commercial-equipment-los-angeles.astro
@@ -8,8 +8,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-refrigerator-repair.webp"
-        alt="Same day commercial refrigerator repair - Los Angeles"
+        src="/units/commercial-refrigerator-repair.webp"
+        alt="Commercial refrigerator repair Los Angeles"
       />
     </div>
 
@@ -32,8 +32,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-freezer-repair.webp"
-        alt="Same day commercial freezer repair - Los Angeles"
+        src="/units/commercial-freezer-repair.webp"
+        alt="Commercial freezer repair Los Angeles"
       />
     </div>
 
@@ -57,8 +57,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-washer-repair.webp"
-        alt="Same day commercial washer repair - Los Angeles"
+        src="/units/commercial-washer-repair.webp"
+        alt="Commercial washer repair Los Angeles"
       />
     </div>
 
@@ -80,8 +80,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-dryer-repair.webp"
-        alt="Same day commercial dryer repair - Los Angeles"
+        src="/units/commercial-dryer-repair.webp"
+        alt="Commercial dryer repair Los Angeles"
       />
     </div>
 
@@ -103,8 +103,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-stove-repair.webp"
-        alt="Same day commercial stove repair - Los Angeles"
+        src="/units/commercial-stove-repair.webp"
+        alt="Commercial stove repair Los Angeles"
       />
     </div>
 
@@ -126,8 +126,8 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="f-content-machinery">
       <img
         loading="lazy"
-        src="/images/commercial-dishwasher-repair.webp"
-        alt="Same day commercial dishwasher repair - Los Angeles"
+        src="/units/commercial-dishwasher-repair.webp"
+        alt="Commercial dishwasher repair Los Angeles"
       />
     </div>
 
