--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -213,7 +213,7 @@ import "css/service-areas/style-service-areas.css";
       </div>
 
       <!-- Heating, ventilation, air conditioning -->
-      <div
+      <!-- <div
         class="full-commercial-machinery"
         id="full-commercial-machinery-nocolor">
         <div class="full-commercial-machinery-1920">
@@ -233,7 +233,7 @@ import "css/service-areas/style-service-areas.css";
           <Unitsheatventcondit />
         </div>
       </div>
-      <Btn />
+      <Btn /> -->
 
       <h2>Addressing Common Appliance Concerns in Los Angeles</h2>
       <p>
