--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,8 +63,7 @@ import "css/style-index.css";
         </div>
 
         <!-- Heating, ventilation, air conditioning -->
-        <div
-          class="full-commercial-machinery"
+        <!-- <div class="full-commercial-machinery"
           id="full-commercial-machinery-nocolor">
           <div class="full-commercial-machinery-1920">
             <div class="header-machinery">
@@ -79,7 +78,7 @@ import "css/style-index.css";
             </div>
             <Unitsheatventcondit />
           </div>
-        </div>
+        </div> -->
 
         <Hero />
         <Features />
