--- a/src/components/css-components/style-units-equipment-los-angeles.css
+++ b/src/components/css-components/style-units-equipment-los-angeles.css
@@ -15,7 +15,7 @@
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
-    padding: 2% 3% 2% 3%;
+    padding: 3% 3% 2% 3%;
 }
 
 .first-element-without-indentation {
@@ -74,21 +74,24 @@
 
 .f-content-machinery {
     max-width: 140px;
-    min-height: 150px;
+    /* min-height: 150px; */
     justify-self: center;
     align-self: center;
+    margin-top: 7px;
 }
 
 .f-content-machinery img {
-    width: 130px;
+    width: 128px;
     max-width: 100%;
     height: 100%;
     transition: 0.25s;
     transform: scale(1, 1);
+    border-radius: 5px;
+    box-shadow: 0px 0px 4px 1.5px rgba(0, 0, 0, 0.25);
 }
 
 .content-machinery:hover .f-content-machinery img {
-    transform: scale(1.1, 1.1);
+    transform: scale(1.07, 1.07);
 }
 
 .d-content-machinery {
@@ -172,7 +175,7 @@
     }
 
     .f-content-machinery img {
-        width: 120px;
+        width: 118px;
         max-width: 100%;
     }
 
