--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -246,7 +246,7 @@ import "css/service-areas/style-service-areas.css";
       <!-- бытовая техника  -->
 
       <div  class="full-commercial-machinery"  id="full-commercial-machinery-nocolor">
-        <div class="full-commercial-machinery-1920 first-element-without-indentation">
+        <div class="full-commercial-machinery-1920 first-element-without-indentation" style="padding: 3% 0% 2% 0% ">
           <div class="header-machinery">
             <h2>Household Appliance Repair Pasadena, CA</h2>
             <p>
@@ -262,7 +262,7 @@ import "css/service-areas/style-service-areas.css";
       <!--  коммерческая техника -->
 
       <div class="full-commercial-machinery"  id="full-commercial-machinery-nocolor">
-        <div class="full-commercial-machinery-1920">
+        <div class="full-commercial-machinery-1920" style="padding: 3% 0% 2% 0%">
           <div class="header-machinery">
             <h2>Commercial Appliance Repair Pasadena, CA For Businesses</h2>
             <p>Efficient functioning of commercial appliances is crucial for smooth business operations. Despite their high quality and reliability, commercial appliances can break costing businesses money. Our Pasadena-based appliance repair services cater specifically to the needs of local businesses. From refrigeration repair to dishwashers and stoves, our company strives to provide services the same day.</p>
