--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -88,6 +88,10 @@ main {
     justify-self: center;
     height: 100%;
     padding: 10% 0;
+
+
+
+    /* padding: 0 0; */
 }
 
 /* .washer-page-header-d-full {
@@ -116,6 +120,10 @@ main {
     align-self: center;
     margin-top: 3%;
     margin-left: 3%;
+
+
+
+    /* width: 97%; */
 }
 
 
