--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -10,12 +10,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         title="Refrigerator Repair Los Angeles"
         href="/services/refrigerator-repair">
         <div class="f-content-machinery">
-          <img
-        
-            loading="lazy"
-            src="/units/refrigerator-repair.webp"
-            alt="Same day expert refrigerator repair - Los Angeles"
-          />
+          <img loading="lazy" src="/units/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles" />
         </div>
 
         <div class="d-content-machinery">
