--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -3,7 +3,7 @@ import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Features from "@components/features.astro";
-import Hero from "@components/hero.astro";
+// import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
@@ -311,7 +311,7 @@ import "css/service-areas/style-service-areas.css";
         in the manual to avoid issues that can lead to a broken oven
       </p>
 
-      <p        &bull; Conducting routine cleaning of filters in your appliances</p>
+      <p>&bull; Conducting routine cleaning of filters in your appliances</p>
 
       <p>&bull; Avoiding the overfilling of washing machines and dryers</p>
 
