--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -26,7 +26,7 @@ import "css/service/style_services.css";
               <span class="animate-charcter"> <p>Refrigerator Repair Los Angeles</p> <p>and Nearby Areas</p></span>
             </h1>
           </div>
-          <!-- <Contactbtn /> -->
+          <Contactbtn />
         </div>
 
         <div class="page-header-f">
