test querySelectorAll contactform

--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -4,6 +4,8 @@ import Button from "./ui/button.astro";
 
 <!-- To make this contact form work, create your free access key from https://web3forms.com/
      Then you will get all form submissions in your email inbox. -->
+
+<!--      
 <form
   action="https://api.web3forms.com/submit"
   method="POST"
@@ -11,7 +13,6 @@ import Button from "./ui/button.astro";
   class="needs-validation"
   novalidate>
   <input type="hidden" name="access_key" value="1d881d82-bde0-46fc-8047-cfaf21357f33" />
-  <!-- Create your free access key from https://web3forms.com/ -->
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <input
@@ -124,4 +125,4 @@ import Button from "./ui/button.astro";
         }, 5000);
       });
   });
-</script>
+</script> -->
