--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,7 +8,7 @@ import "components/css-components/style-hero.css";
 ---
 
 <!-- слайдер -->
-<script defer>
+<!-- <script defer>
   document.addEventListener("DOMContentLoaded", () => {
     const slides = document.querySelector(".slides");
     const slide = document.querySelectorAll(".slide");
@@ -76,7 +76,7 @@ import "components/css-components/style-hero.css";
       startSlider();
     }, 20);
   });
-</script>
+</script> -->
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24 full-form-1">
@@ -191,7 +191,7 @@ import "components/css-components/style-hero.css";
   </div>
 
   <!-- форма скрипта отправки формы, только js  -->
-  <script is:inline>
+  <!-- <script is:inline>
     const form = document.getElementById("form");
     const result = document.getElementById("result");
 
@@ -239,5 +239,5 @@ import "components/css-components/style-hero.css";
           }, 5000);
         });
     });
-  </script>
+  </script> -->
 </main>
