--- a/src/components/reviews-full.astro
+++ b/src/components/reviews-full.astro
@@ -74,7 +74,7 @@ import "components/css-components/style-reviews-full.css";
 -->
 
 <!-- кнопка Load More показ более 8 элементов -->
-<script defer>
+<!-- <script defer>
   document.addEventListener("DOMContentLoaded", function () {
     function setupReviewLoading(containerId, buttonId) {
       const reviewsContainer = document.getElementById(containerId);
@@ -106,10 +106,10 @@ import "components/css-components/style-reviews-full.css";
     setupReviewLoading("video_editing", "load-more-video_editing");
     setupReviewLoading("graphic_arts", "load-more-graphic_arts");
   });
-</script>
+</script> -->
 
 <!-- переключение по вкладкам верхнего меню  reviews-->
-<script defer>
+<!-- <script defer>
   document.addEventListener("DOMContentLoaded", function () {
     const d3model = document.getElementById("d3_model");
     const videoediting = document.getElementById("video_editing");
@@ -157,14 +157,14 @@ import "components/css-components/style-reviews-full.css";
       document.querySelector(selector).classList.toggle(className);
     }
   });
-</script>
+</script> -->
 
 <!-- показать больше Read More -->
-<script defer>
+<!-- <script defer>
   let more = document.querySelectorAll(".more");
   for (let i = 0; i < more.length; i++) {
     more[i].addEventListener("click", function () {
       more[i].parentNode.classList.toggle("comment-active");
     });
   }
-</script>
+</script> -->
