--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -5,7 +5,7 @@ import Button from "./ui/button.astro";
 <!-- To make this contact form work, create your free access key from https://web3forms.com/
      Then you will get all form submissions in your email inbox. -->
 
-<!--      
+     
 <form
   action="https://api.web3forms.com/submit"
   method="POST"
@@ -125,4 +125,4 @@ import Button from "./ui/button.astro";
         }, 5000);
       });
   });
-</script> -->
+</script>
