--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -3,16 +3,16 @@ import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 import Btn from "@components/btn.astro";
 import "@components/css-components/footer-cta.css";
-import ReviewsFull from "@components/reviews-full.astro";
+// import ReviewsFull from "@components/reviews-full.astro";
 ---
 
 <!--Reviews -->
 <div id="reviews">
   <!-- скрипт отзывов грузит страницу на 17кб -->
   <div class="feedback" id="feedbackReviews">
-    <ReviewsFull />
+    <!-- <ReviewsFull /> -->
 
-    <!-- <script
+    <script
     defer
     src="https://static.elfsight.com/platform/platform.js"
     data-use-service-core></script>
@@ -20,7 +20,7 @@ import ReviewsFull from "@components/reviews-full.astro";
   <div
     class="elfsight-app-b69045ef-2bc6-4ac0-a4a3-5c17e1820cd5"
     data-elfsight-app-lazy>
-  </div> -->
+  </div>
   </div>
   <!--End reviews -->
 
@@ -73,7 +73,7 @@ import ReviewsFull from "@components/reviews-full.astro";
     <div class="full-footer">
       <div class="button-footer">
         <div class="a_button-footer">
-          <h4>Don't Wait! Contact Us Today.</h4>
+          <h3>Don't Wait! Contact Us Today.</h3>
         </div>
 
         <div class="b_button-footer">
