--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -181,7 +181,7 @@ const makeTitle = title
         "sameAs": "https://maps.app.goo.gl/o1PTfsdJeiBPjdu38"
         }
     </script> 
-    <!--5 star reviews
+    <!--5 star review
     <script type="application/ld+json">
       {
         "@context": "http://schema.org/",
