--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -119,7 +119,8 @@ import "components/css-components/style-reviews-full.css";
         <div class="description-b">
           <p>Called them n they had a tech in my home within 90 mins.!</p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
+        
 
         <div class="google-b">
           <a
@@ -278,7 +279,7 @@ import "components/css-components/style-reviews-full.css";
             Repair.
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqc0w2cGdnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjsL6pggE%7CCgwIhtP8sAYQoIGGogM%7C">
@@ -435,7 +436,7 @@ import "components/css-components/style-reviews-full.css";
             Recommend
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
 
         <div class="google-b">
           <a
@@ -595,7 +596,7 @@ import "components/css-components/style-reviews-full.css";
             Pasadena.
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChZDSUhNMG9nS0VJQ0FnSUNqdU12ZUtREAE!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjuMveKQ%7CCgwI0--AsQYQ2KrisQE%7C">
@@ -753,7 +754,7 @@ import "components/css-components/style-reviews-full.css";
             come back the next day to install our dishwasher. Thanks Roman!
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNENC1iYzRRRRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
@@ -910,7 +911,7 @@ import "components/css-components/style-reviews-full.css";
             friendly staff. My go-to for all future appliance repairs!
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNEMzVYSDB3RRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
@@ -1066,7 +1067,7 @@ import "components/css-components/style-reviews-full.css";
             appliance repair.
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
 
         <div class="google-b">
           <a
@@ -1224,7 +1225,7 @@ import "components/css-components/style-reviews-full.css";
             Thermador refrigerator. I will contact you again!
           </p>
         </div>
-        <a class="more"></a>
+        <button class="more" title="Read More"><p>...</p></button>
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5Xzh1bVRBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
