--- a/src/components/css-components/style-reviews-full-test.css
+++ b/src/components/css-components/style-reviews-full-test.css
@@ -175,6 +175,7 @@
 
 .desc-name-a a {
   display: flex;
+  padding: 8px 0 0 0;
 }
 
 .desc-name-a svg {
@@ -229,6 +230,12 @@
 .more {
   color: #3838389c !important;
   cursor: pointer;
+  display: flex;
+}
+
+.more p {
+  margin: 0;
+  color: #3838389c !important;
 }
 
 .more:hover {
@@ -249,6 +256,10 @@
   height: auto;
 }
 
+.content-b.comment-active .more p {
+  visibility: hidden;
+}
+
 
 
 
@@ -260,7 +271,12 @@
 
 .google-b {
   cursor: pointer;
-  margin-top: 20px;
+}
+
+.google-b a {
+  padding: 15px 0 0 0;
+  height: 100%;
+  display: flex;
 }
 
 .google-b svg {
@@ -286,20 +302,22 @@
   display: inline-flex;
 }
 
-.any_task_cont_selection h5 {
+.any_task_cont_selection h3 {
   font-size: 1rem;
 }
 
-.sel_3d h5,
-.sel_vid h5,
-.sel_graph h5 {
+.sel_3d h3,
+.sel_vid h3,
+.sel_graph h3 {
   color: #000000;
   cursor: pointer;
+  margin-top: 0;
+  font-weight: 500;
 }
 
-.sel_3d h5:hover,
-.sel_vid h5:hover,
-.sel_graph h5:hover {
+.sel_3d h3:hover,
+.sel_vid h3:hover,
+.sel_graph h3:hover {
   color: #000;
   transition: color 0.3s ease;
 }
@@ -407,7 +425,7 @@
   }
 
   .content-page-moreHid .more {
-    display: grid;
+    display: flex;
   }
 
 }
