--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -150,13 +150,9 @@ import "components/css-components/style-reviews-full.css";
                   d="M78.288 11.302c-3.504 0-6.446 2.788-6.446 6.901 0 4.353 3.28 6.934 6.782 6.934 2.924 0 4.718-1.6 5.789-3.032l-2.389-1.59c-.62.962-1.656 1.902-3.385 1.902-1.943 0-2.836-1.063-3.39-2.094l9.266-3.845-.48-1.126c-.896-2.207-2.984-4.05-5.747-4.05Zm.12 2.658c1.263 0 2.171.671 2.557 1.476l-6.187 2.586c-.267-2.002 1.63-4.062 3.63-4.062Z"
                 ></path><path
                   fill="#34A853"
-                  d="M67.425 24.727h3.044V4.359h-3.044v20.368Z"></path></g
-              ><defs
-                ><clipPath id="a-1"
-                  ><path fill="#fff" d="M0 0h84.515v36H0z"></path></clipPath
-                ></defs
-              ></svg
-            >
+                  d="M67.425 24.727h3.044V4.359h-3.044v20.368Z"></path></g><defs><clipPath id="a-1"><path fill="#fff" d="M0 0h84.515v36H0z"></path></clipPath></defs>
+                </svg>
+                <p>.</p>
           </a>
         </div>
       </div>
@@ -315,6 +311,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -473,6 +470,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -632,6 +630,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -790,6 +789,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -947,6 +947,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -1104,6 +1105,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
@@ -1261,6 +1263,7 @@ import "components/css-components/style-reviews-full.css";
                 ></defs
               ></svg
             >
+            <p>.</p>
           </a>
         </div>
       </div>
