--- a/src/components/css-components/style-reviews-full.css
+++ b/src/components/css-components/style-reviews-full.css
@@ -178,12 +178,19 @@
   padding: 8px 0 0 0;
 }
 
+.desc-name-a img {
+  height: 100%;
+  max-width: 16px;
+  margin-left: 5px;
+}
+
 .desc-name-a svg {
   width: 100%;
   max-width: 16px;
   height: auto;
-  margin-left: 5px;
 }
+
+
 
 
 
@@ -193,6 +200,11 @@
 .stars-b {
   display: flex;
   margin-bottom: 5px;
+}
+
+.stars-b img {
+  height: 100%;
+  max-width: 14px;
 }
 
 .stars-b svg {
@@ -275,14 +287,18 @@
 
 .google-b a {
   padding: 15px 0 0 0;
+  /* height: 100%;
+  display: flex; */
+}
+
+.google-b img {
+  /* width: 100%; */
   height: 100%;
-  display: flex;
 }
 
 .google-b svg {
-  width: 100%;
-  /* max-width: 100% !important; */
-  height: auto;
+  /* width: 100%; */
+  /* height: auto; */
 }
 
 .google-b p {
