--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -19,7 +19,7 @@ import "components/css-components/style-reviews-full.css";
             <a 
               href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNMN3F1bF9RRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICL7qul_QE%7CCgwI4vTKswYQgPzZlwE%7C">
               <b>Martha LOV</b>
-              <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+               <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -66,7 +66,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqc0w2cGdnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjsL6pggE%7CCgwIhtP8sAYQoIGGogM%7C">
               <b>David B</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -116,7 +116,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqOE4yTWpnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICj8N2MjgE%7CCgwI46j9sAYQsOvxnQE%7C">
               <b>Umidkhon Sharapat</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -166,7 +166,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChZDSUhNMG9nS0VJQ0FnSUNqdU12ZUtREAE!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjuMveKQ%7CCgwI0--AsQYQ2KrisQE%7C">
               <b>Anastasia Klenova</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -217,7 +217,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNENC1iYzRRRRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
               <b>Farinoush Gaminchi</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -267,7 +267,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNEMzVYSDB3RRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
               <b>Courtney Shaffer</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -316,7 +316,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5X19XQ2FBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
               <b>Erika RODRÍGUEZ</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
@@ -365,7 +365,7 @@ import "components/css-components/style-reviews-full.css";
               href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5Xzh1bVRBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
               <b>Andrey</b>
 
-               <img  loading="lazy"  src="/public/svg/blue-check.svg" alt="Verified Customer"/>
+                <img  loading="lazy"  src="/svg/blue-check.svg" alt="Verified Customer"/>
             </a>
           </div>
           <div class="date-a">
