--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -45,7 +45,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a 
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNMN3F1bF9RRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICL7qul_QE%7CCgwI4vTKswYQgPzZlwE%7C">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
                  
           </a>
         </div>
@@ -95,7 +95,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqc0w2cGdnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjsL6pggE%7CCgwIhtP8sAYQoIGGogM%7C">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -145,7 +145,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqOE4yTWpnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICj8N2MjgE%7CCgwI46j9sAYQsOvxnQE%7C">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -196,7 +196,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChZDSUhNMG9nS0VJQ0FnSUNqdU12ZUtREAE!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjuMveKQ%7CCgwI0--AsQYQ2KrisQE%7C">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -246,7 +246,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNENC1iYzRRRRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -295,7 +295,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNEMzVYSDB3RRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -344,7 +344,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5X19XQ2FBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
@@ -393,7 +393,7 @@ import "components/css-components/style-reviews-full.css";
         <div class="google-b">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5Xzh1bVRBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/public/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
              
           </a>
         </div>
