--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -30,11 +30,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-            <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+            <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>Called them n they had a tech in my home within 90 mins.!</p>
@@ -77,11 +77,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -127,11 +127,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -177,11 +177,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -228,11 +228,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -278,11 +278,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -327,11 +327,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
@@ -376,11 +376,11 @@ import "components/css-components/style-reviews-full.css";
 
       <div class="content-b">
         <div class="stars-b">
-           <img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
-<img  loading="lazy"  src="/public/svg/stars.svg" alt="stars"/>
+           <img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
+<img  loading="lazy"  src="/svg/stars.svg" alt="stars"/>
         </div>
         <div class="description-b">
           <p>
